--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "dependencies": {
     "express": "^4.18.2",
-    "mysql2": "^3.3.1"
+    "mysql2": "^3.3.1",
+    "nodemon": "^2.0.22"
+  },"main": "index.js",
+  "scripts": {
+    "start": "nodemon server.js"
   }
+
 }
