--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
     "express": "^4.18.2",
     "mysql2": "^3.3.1",
     "nodemon": "^2.0.22"
-  },"main": "index.js",
-  "scripts": {
-    "start": "nodemon server.js"
-  }
+  },"main": "index.js"
+  
+ }
 
-}
+
