--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "dependencies": {
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^3.3.1",
     "nodemon": "^2.0.22"
   },
-  "main": "index.js"
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon index.js"
+  },
+  "devDependencies": {
+    "npm": "^9.6.7"
+  }
 }
